--- a/语法和算法/基本数据类型/set语法.ipynb
+++ b/语法和算法/基本数据类型/set语法.ipynb
@@ -125,6 +125,157 @@
     "s = set()\n",
     "print(s)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`set` 是 Python 中的一种内置数据类型，用于存储无序且唯一的元素集合。`set` 支持多种操作，包括添加、删除、查找、集合运算等。以下是 `set` 的常用操作：\n",
+    "\n",
+    "### 1. **创建集合**\n",
+    "   - 使用 `{}` 或 `set()` 创建集合。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}  # 使用花括号创建集合\n",
+    "   s = set([1, 2, 3])  # 使用 set() 函数创建集合\n",
+    "   ```\n",
+    "\n",
+    "### 2. **添加元素**\n",
+    "   - 使用 `add()` 方法向集合中添加单个元素。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}\n",
+    "   s.add(4)  # s = {1, 2, 3, 4}\n",
+    "   ```\n",
+    "\n",
+    "   - 使用 `update()` 方法向集合中添加多个元素。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}\n",
+    "   s.update([4, 5, 6])  # s = {1, 2, 3, 4, 5, 6}\n",
+    "   ```\n",
+    "\n",
+    "### 3. **删除元素**\n",
+    "   - 使用 `remove()` 方法删除集合中的指定元素，如果元素不存在会抛出 `KeyError`。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}\n",
+    "   s.remove(2)  # s = {1, 3}\n",
+    "   ```\n",
+    "\n",
+    "   - 使用 `discard()` 方法删除集合中的指定元素，如果元素不存在不会抛出错误。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}\n",
+    "   s.discard(2)  # s = {1, 3}\n",
+    "   s.discard(4)  # s = {1, 3} (不会抛出错误)\n",
+    "   ```\n",
+    "\n",
+    "   - 使用 `pop()` 方法随机删除并返回集合中的一个元素。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}\n",
+    "   elem = s.pop()  # elem 可能是 1, 2, 或 3\n",
+    "   ```\n",
+    "\n",
+    "   - 使用 `clear()` 方法清空集合。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}\n",
+    "   s.clear()  # s = set()\n",
+    "   ```\n",
+    "\n",
+    "### 4. **查找元素**\n",
+    "   - 使用 `in` 关键字检查元素是否在集合中。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}\n",
+    "   print(2 in s)  # 输出: True\n",
+    "   print(4 in s)  # 输出: False\n",
+    "   ```\n",
+    "\n",
+    "### 5. **集合运算**\n",
+    "   - **并集**：使用 `union()` 方法或 `|` 运算符。\n",
+    "   ```python\n",
+    "   s1 = {1, 2, 3}\n",
+    "   s2 = {3, 4, 5}\n",
+    "   print(s1.union(s2))  # 输出: {1, 2, 3, 4, 5}\n",
+    "   print(s1 | s2)  # 输出: {1, 2, 3, 4, 5}\n",
+    "   ```\n",
+    "\n",
+    "   - **交集**：使用 `intersection()` 方法或 `&` 运算符。\n",
+    "   ```python\n",
+    "   s1 = {1, 2, 3}\n",
+    "   s2 = {3, 4, 5}\n",
+    "   print(s1.intersection(s2))  # 输出: {3}\n",
+    "   print(s1 & s2)  # 输出: {3}\n",
+    "   ```\n",
+    "\n",
+    "   - **差集**：使用 `difference()` 方法或 `-` 运算符。\n",
+    "   ```python\n",
+    "   s1 = {1, 2, 3}\n",
+    "   s2 = {3, 4, 5}\n",
+    "   print(s1.difference(s2))  # 输出: {1, 2}\n",
+    "   print(s1 - s2)  # 输出: {1, 2}\n",
+    "   ```\n",
+    "\n",
+    "   - **对称差集**：使用 `symmetric_difference()` 方法或 `^` 运算符。\n",
+    "   ```python\n",
+    "   s1 = {1, 2, 3}\n",
+    "   s2 = {3, 4, 5}\n",
+    "   print(s1.symmetric_difference(s2))  # 输出: {1, 2, 4, 5}\n",
+    "   print(s1 ^ s2)  # 输出: {1, 2, 4, 5}\n",
+    "   ```\n",
+    "\n",
+    "### 6. **集合比较**\n",
+    "   - **子集**：使用 `issubset()` 方法或 `<=` 运算符。\n",
+    "   ```python\n",
+    "   s1 = {1, 2}\n",
+    "   s2 = {1, 2, 3}\n",
+    "   print(s1.issubset(s2))  # 输出: True\n",
+    "   print(s1 <= s2)  # 输出: True\n",
+    "   ```\n",
+    "\n",
+    "   - **真子集**：使用 `<` 运算符。\n",
+    "   ```python\n",
+    "   s1 = {1, 2}\n",
+    "   s2 = {1, 2, 3}\n",
+    "   print(s1 < s2)  # 输出: True\n",
+    "   ```\n",
+    "\n",
+    "   - **超集**：使用 `issuperset()` 方法或 `>=` 运算符。\n",
+    "   ```python\n",
+    "   s1 = {1, 2, 3}\n",
+    "   s2 = {1, 2}\n",
+    "   print(s1.issuperset(s2))  # 输出: True\n",
+    "   print(s1 >= s2)  # 输出: True\n",
+    "   ```\n",
+    "\n",
+    "   - **真超集**：使用 `>` 运算符。\n",
+    "   ```python\n",
+    "   s1 = {1, 2, 3}\n",
+    "   s2 = {1, 2}\n",
+    "   print(s1 > s2)  # 输出: True\n",
+    "   ```\n",
+    "\n",
+    "### 7. **集合大小**\n",
+    "   - 使用 `len()` 函数获取集合的大小。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}\n",
+    "   print(len(s))  # 输出: 3\n",
+    "   ```\n",
+    "\n",
+    "### 8. **集合遍历**\n",
+    "   - 使用 `for` 循环遍历集合中的元素。\n",
+    "   ```python\n",
+    "   s = {1, 2, 3}\n",
+    "   for elem in s:\n",
+    "       print(elem)\n",
+    "   ```\n",
+    "\n",
+    "### 9. **集合复制**\n",
+    "   - 使用 `copy()` 方法复制集合。\n",
+    "   ```python\n",
+    "   s1 = {1, 2, 3}\n",
+    "   s2 = s1.copy()  # s2 = {1, 2, 3}\n",
+    "   ```\n",
+    "\n",
+    "### 总结\n",
+    "\n",
+    "`set` 提供了丰富的操作来处理集合数据，包括添加、删除、查找、集合运算等。这些操作使得 `set` 在处理需要唯一元素的场景时非常有用，比如去重、集合运算等。"
+   ]
   }
  ],
  "metadata": {
