--- a/语法和算法/竞赛常用标准库/collections.ipynb
+++ b/语法和算法/竞赛常用标准库/collections.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,97 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. defaultdict : 有默认值的字典"
+    "## 3. defaultdict : 有默认值的字典\n",
+    "\n",
+    "- 自动为不存在的`键`生成`默认值！`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 导入: \n",
+    "```python\n",
+    "from collections import defaultdict\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import defaultdict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 可以充当C++中的vector使用\n",
+    "当我们需要映射边的关系的时候(树, 图)\n",
+    "\n",
+    "可以使用 defaultdict(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {1: [4]})\n",
+      "defaultdict(<class 'list'>, {1: [4, 2], 8: [1]})\n",
+      "[0, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "e = defaultdict(list)\n",
+    "# 在e中如果没有这个元素的话， 就会自动创建一个list对象和当前key映射\n",
+    "\n",
+    "e[1].append(4)\n",
+    "print(e) #? {1: [4]}\n",
+    "\n",
+    "e[8].append(1)\n",
+    "e[1].append(2)\n",
+    "print(e)\n",
+    "\n",
+    "a = defaultdict(lambda: [0, 0])\n",
+    "a[2][1] = 4\n",
+    "print(a[2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. 可以创建邻接表"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {1: [2, 3], 2: [3], 3: [1]})\n"
+     ]
+    }
+   ],
+   "source": [
+    "edges = [(1, 2), (2, 3), (3, 1), (1, 3)]\n",
+    "graph = defaultdict(list)\n",
+    "for u, v in edges:\n",
+    "    graph[u].append(v)\n",
+    "print(graph)"
    ]
   },
   {
