--- a/语法和算法/基础算法/差分/diff.ipynb
+++ b/语法和算法/基础算法/差分/diff.ipynb
@@ -15,6 +15,7 @@
     "# 差分\n",
     "\n",
     "- 差分定义: diff[i] = a[i] - a[i-1]\n",
+    "- diff[0] = arr[0]\n",
     "- 对差分数组做`前缀和`可以`还原`数组\n",
     "\n",
     "利用差分给区间上的所有元素 +x\n",
