--- a/语法和算法/高级数据结构基础/线段树/线段树.ipynb
+++ b/语法和算法/高级数据结构基础/线段树/线段树.ipynb
@@ -30,22 +30,103 @@
     "- 右儿子节点 => [(s + t) // 2 + 1, t]\n",
     "\n",
     "- **实现过程**\n",
-    "  - 通过递归建树。假设当前根节点为p，如果根节的管理区域的区间长度已经是1，则直接通过原始数组的值初始化该节点。否则将该区间从中点处分割为两个子区间，分别递归进入左右子节点进行建树，最后合并两个子节点的信息\n",
+    "  - 通过递归建树。假设当前根节点为p，如果根节的管理区域的区间长度已经是1，则直接通过原始数组的值初始化该节点。否则将该区间从中\n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "  \n",
+    "进入左右子节点进行建树，最后合并两个子节点的信息\n",
     "\n",
+    "- 图⬇️\n",
     "\n",
-    "\n"
+    "![alt text](image.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 359,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 打印线段树的树形结构\n",
+    "\n",
+    "def print_tree(s, t, p, d, indent=\"\"):\n",
+    "    \"\"\"\n",
+    "    递归打印线段树的树形结构。\n",
+    "    \n",
+    "    参数：\n",
+    "    - s: 当前节点包含的区间起点\n",
+    "    - t: 当前节点包含的区间终点\n",
+    "    - p: 当前节点编号\n",
+    "    - indent: 当前节点的缩进字符串，用于显示树形结构\n",
+    "    \"\"\"\n",
+    "    if s == t:\n",
+    "        # 叶子节点，打印节点值和区间\n",
+    "        print(f\"{indent}Node {p}: [{s}] = {d[p]}\")\n",
+    "        return\n",
+    "    m = (s + t) >> 1\n",
+    "    # 打印当前节点的信息\n",
+    "    print(f\"{indent}Node {p}: [{s}, {t}] = {d[p]}\")\n",
+    "    # 递归打印左子树\n",
+    "    print_tree(s, m, p << 1, d, indent + \"---\")\n",
+    "    # 递归打印右子树\n",
+    "    print_tree(m + 1, t, (p << 1) | 1, d, indent + \"---\")\n",
+    "\n",
+    "# 示例：打印线段树的树形结构\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 360,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_tree_with_lazy(s, t, p, d, lazy, indent=\"\"):\n",
+    "    \"\"\"\n",
+    "    递归打印线段树的树形结构，并显示懒惰标记的值。\n",
+    "    \n",
+    "    参数：\n",
+    "    - s: 当前节点包含的区间起点\n",
+    "    - t: 当前节点包含的区间终点\n",
+    "    - p: 当前节点编号\n",
+    "    - d: 线段树的节点值数组\n",
+    "    - lazy: 懒惰标记数组\n",
+    "    - indent: 当前节点的缩进字符串，用于显示树形结构\n",
+    "    \"\"\"\n",
+    "    if s == t:\n",
+    "        # 叶子节点，打印节点值、区间和懒惰标记\n",
+    "        print(f\"{indent}Node {p}: [{s}] = {d[p]}, Lazy = {lazy[p]}\")\n",
+    "        return\n",
+    "    m = (s + t) >> 1\n",
+    "    # 打印当前节点的信息，包括节点值、区间和懒惰标记\n",
+    "    print(f\"{indent}Node {p}: [{s}, {t}] = {d[p]}, Lazy = {lazy[p]}\")\n",
+    "    # 递归打印左子树\n",
+    "    print_tree_with_lazy(s, m, p << 1, d, lazy, indent + \"---\")\n",
+    "    # 递归打印右子树\n",
+    "    print_tree_with_lazy(m + 1, t, (p << 1) | 1, d, lazy, indent + \"---\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 15 6 9 3 3 4 5 1 2 0 0 0 0 0 0 0 0 0 0\n"
+      "0 15 6 9 3 3 4 5 1 2 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "Node 1: [1, 5] = 15\n",
+      "---Node 2: [1, 3] = 6\n",
+      "------Node 4: [1, 2] = 3\n",
+      "---------Node 8: [1] = 1\n",
+      "---------Node 9: [2] = 2\n",
+      "------Node 5: [3] = 3\n",
+      "---Node 3: [4, 5] = 9\n",
+      "------Node 6: [4] = 4\n",
+      "------Node 7: [5] = 5\n"
      ]
     }
    ],
@@ -59,16 +140,16 @@
     "    m = (s + t) >> 1\n",
     "    # 递归进入左右子节点\n",
     "    build(s, m, p << 1) # 左边节点\n",
-    "    build(m + 1, t, (p << 1) + 1) # 右边节点\n",
-    "    d[p] = d[p << 1] + d[(p << 1) + 1] #? 合并左右节点的信息\n",
+    "    build(m + 1, t, p << 1 | 1) # 右边节点\n",
+    "    d[p] = d[p << 1] + d[p << 1 | 1] #? 合并左右节点的信息\n",
     "    #! 注意: << 的优先级比 + 低 ！\n",
-    "tree = [1, 2, 3, 4, 5]\n",
+    "tree = [0] + [1, 2, 3, 4, 5] # 原始数组也要从1开始\n",
     "n = len(tree)\n",
     "d = [0] * (4 * n)\n",
-    "build(0, n - 1, 1)\n",
+    "build(1, n - 1, 1)\n",
     "print(*d)\n",
     "    \n",
-    "    "
+    "print_tree(1, n - 1, 1, d)   "
    ]
   },
   {
@@ -81,14 +162,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 362,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "9\n"
+      "5\n"
      ]
     }
    ],
@@ -107,24 +188,297 @@
     "    if l <= m:\n",
     "        sum_ += get_sum(l, r, s, m, p << 1)\n",
     "    if r > m:\n",
-    "        sum_ += get_sum(l, r, m + 1, t, (p << 1) + 1)\n",
+    "        sum_ += get_sum(l, r, m + 1, t, p << 1 | 1)\n",
     "    return sum_\n",
     "\n",
-    "print(get_sum(1, 3, 0, n - 1, 1)) # 2 + 3 + 4\n",
+    "print(get_sum(1, 3, 0, n - 1, 1)) # 1 + 2 + 3\n",
     "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# 线段树的单点更新\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 363,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 25 16 9 13 3 4 5 1 12 0 0 0 0 0 0 0 0 0 0 0 0 0 0\n",
+      "Node 1: [1, 5] = 25\n",
+      "---Node 2: [1, 3] = 16\n",
+      "------Node 4: [1, 2] = 13\n",
+      "---------Node 8: [1] = 1\n",
+      "---------Node 9: [2] = 12\n",
+      "------Node 5: [3] = 3\n",
+      "---Node 3: [4, 5] = 9\n",
+      "------Node 6: [4] = 4\n",
+      "------Node 7: [5] = 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def once_update(index, value, s, t, p):\n",
+    "    \"\"\"\n",
+    "    单点更新操作：将数组中 index 位置的元素更新为 value，并更新线段树中对应的节点。\n",
+    "    \n",
+    "    参数：\n",
+    "    - index: 需要更新的数组下标\n",
+    "    - value: 更新的值（加上或者更新）\n",
+    "    - [s, t]: 当前节点包含的区间\n",
+    "    - p: 当前节点编号\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if s == t: \n",
+    "        # 找到叶子节点, 进行更新\n",
+    "        d[p] += value\n",
+    "        return \n",
+    "    \n",
+    "    m = (s + t) >> 1 # 计算中点\n",
+    "    if index <= m:\n",
+    "        # 和左子节点有交集, 递归向左\n",
+    "        once_update(index, value, s, m, p << 1)\n",
+    "    else:\n",
+    "        # 和右子节点有交集\n",
+    "        once_update(index, value, m + 1, t, p << 1 | 1)\n",
+    "    \n",
+    "    # 更新当前节点为子节点和\n",
+    "    d[p] = d[p << 1] + d[p << 1 | 1]\n",
+    "\n",
+    "once_update(2, 10, 1, n - 1, 1)\n",
+    "print(*d)\n",
+    "\n",
+    "print_tree(1, n - 1, 1, d)   \n",
+    "once_update(2, -10, 1, n - 1, 1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 线段树的区间更新 & lazy标记!\n",
+    "\n",
+    "- lazy标记的产生:\n",
+    "  - 如果我们对线段树进行区间更新的时候每次都要遍历其涉及的所有区间, 那么复杂度和不用线段树没啥区别\n",
+    "  - 所有就引入了 **lazy标记** 数组来简化更新操作\n",
+    "\n",
+    "- lazy标记: \n",
+    "  - 简单来说就是延迟了对节点信息的更新，从而减少了不必要的操作次数，通过打标机的方法表明该节点对应的区间在某一次操作中被更改，但是先不更新该节点的子节点信息，实质性的修改则在下一次访问带有标记的节点时才lazy标记的下放（对子节点的更新）\n",
+    "- **具体操作过程:**\n",
+    "  - 1. 创建一个 lazy = [0] * (4 * n) => 用于存储对应线段树节点的更新标志\n",
+    "  - 2. 每次执行的时候通过递归找到与这个区间有交集的区间并且打上标记，但是先不更新这些子节点的信息，下一次访问带标记的节点是才进行下放\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 364,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "没有更新前的树：\n",
+      "Node 1: [1, 5] = 15, Lazy = 0\n",
+      "---Node 2: [1, 3] = 6, Lazy = 0\n",
+      "------Node 4: [1, 2] = 3, Lazy = 0\n",
+      "---------Node 8: [1] = 1, Lazy = 0\n",
+      "---------Node 9: [2] = 2, Lazy = 0\n",
+      "------Node 5: [3] = 3, Lazy = 0\n",
+      "---Node 3: [4, 5] = 9, Lazy = 0\n",
+      "------Node 6: [4] = 4, Lazy = 0\n",
+      "------Node 7: [5] = 5, Lazy = 0\n",
+      "[1, 3] + 5 后的树\n",
+      "Node 1: [1, 5] = 30, Lazy = 0\n",
+      "---Node 2: [1, 3] = 21, Lazy = 5\n",
+      "------Node 4: [1, 2] = 3, Lazy = 0\n",
+      "---------Node 8: [1] = 1, Lazy = 0\n",
+      "---------Node 9: [2] = 2, Lazy = 0\n",
+      "------Node 5: [3] = 3, Lazy = 0\n",
+      "---Node 3: [4, 5] = 9, Lazy = 0\n",
+      "------Node 6: [4] = 4, Lazy = 0\n",
+      "------Node 7: [5] = 5, Lazy = 0\n",
+      "[3, 3] + 5 后的树\n",
+      "Node 1: [1, 5] = 35, Lazy = 0\n",
+      "---Node 2: [1, 3] = 26, Lazy = 0\n",
+      "------Node 4: [1, 2] = 13, Lazy = 5\n",
+      "---------Node 8: [1] = 1, Lazy = 0\n",
+      "---------Node 9: [2] = 2, Lazy = 0\n",
+      "------Node 5: [3] = 13, Lazy = 10\n",
+      "---Node 3: [4, 5] = 9, Lazy = 0\n",
+      "------Node 6: [4] = 4, Lazy = 0\n",
+      "------Node 7: [5] = 5, Lazy = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "lazy = [0] * (4 * n)\n",
+    "\n",
+    "def push_down(p, s, t):\n",
+    "    \"\"\"\n",
+    "    将懒惰标记向下传递到子节点。\n",
+    "    \n",
+    "    参数：\n",
+    "    - p: 当前节点编号\n",
+    "    - [s, t]: 当前节点包含的区间\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if lazy[p] != 0:\n",
+    "        m = (s + t) >> 1\n",
+    "        # 更新左子节点的值和lazy标记\n",
+    "        d[p << 1] += lazy[p] * (m - s + 1)\n",
+    "        lazy[p << 1] += lazy[p] # 下放lazy标记\n",
+    "        \n",
+    "        # 更新右子节点的值和lazy标记\n",
+    "        d[p << 1 | 1] += lazy[p] * (t - m)\n",
+    "        lazy[p << 1 | 1] += lazy[p]\n",
+    "        \n",
+    "        # 清楚当前的懒惰标记\n",
+    "        lazy[p] = 0\n",
+    "\n",
+    "def range_update(l, r, value, s, t, p):\n",
+    "    \"\"\"\n",
+    "    区间更新操作：将区间 [l, r] 的每个元素加上 value。\n",
+    "    \n",
+    "    参数：\n",
+    "    - l: 区间的起点\n",
+    "    - r: 区间的终点\n",
+    "    - value: 要加的值\n",
+    "    - [s, t]: 当前节点包含的区间\n",
+    "    - p: 当前节点编号\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if l <= s and t <= r:\n",
+    "        d[p] += value * (t - s + 1) # 乘上管理区间的长度\n",
+    "        lazy[p] += value\n",
+    "        return \n",
+    "    \n",
+    "    # 下放lazy标记\n",
+    "    push_down(p, s, t)\n",
+    "    m = (s + t) >> 1\n",
+    "    \n",
+    "    #? 向左右子节点进行递归\n",
+    "    if l <= m:\n",
+    "        range_update(l, r, value, s, m, p << 1)\n",
+    "    if r > m:\n",
+    "        range_update(l, r, value, m + 1, t, p << 1 | 1)\n",
+    "        \n",
+    "    #? merge\n",
+    "    d[p] = d[p << 1] + d[p << 1 | 1]\n",
+    "\n",
+    "# 将 [2, 5] 加上 5\n",
+    "print(\"没有更新前的树：\")\n",
+    "print_tree_with_lazy(1, n - 1, 1, d, lazy) \n",
+    "print(\"[1, 3] + 5 后的树\")\n",
+    "range_update(1, 3, 5, 1, n - 1, 1)\n",
+    "# print(\"d:\",*d)\n",
+    "# print(\"lazy:\",*lazy)\n",
+    "print_tree_with_lazy(1, n - 1, 1, d, lazy) \n",
+    "print(\"[3, 3] + 5 后的树\")\n",
+    "range_update(3, 3, 5, 1, n - 1, 1)\n",
+    "print_tree_with_lazy(1, n - 1, 1, d, lazy) \n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 带lazy的查询区间和"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "现在查询[1,2]:\n",
+      "13\n",
+      "Node 1: [1, 5] = 35, Lazy = 0\n",
+      "---Node 2: [1, 3] = 26, Lazy = 0\n",
+      "------Node 4: [1, 2] = 13, Lazy = 5\n",
+      "---------Node 8: [1] = 1, Lazy = 0\n",
+      "---------Node 9: [2] = 2, Lazy = 0\n",
+      "------Node 5: [3] = 13, Lazy = 10\n",
+      "---Node 3: [4, 5] = 9, Lazy = 0\n",
+      "------Node 6: [4] = 4, Lazy = 0\n",
+      "------Node 7: [5] = 5, Lazy = 0\n",
+      "此时[1,2]的lazy还没有下放, 因为没有涉及到查询[1, 2]的子节点\n",
+      "现在查询[2,2]:\n",
+      "7\n",
+      "Node 1: [1, 5] = 35, Lazy = 0\n",
+      "---Node 2: [1, 3] = 26, Lazy = 0\n",
+      "------Node 4: [1, 2] = 13, Lazy = 0\n",
+      "---------Node 8: [1] = 6, Lazy = 5\n",
+      "---------Node 9: [2] = 7, Lazy = 5\n",
+      "------Node 5: [3] = 13, Lazy = 10\n",
+      "---Node 3: [4, 5] = 9, Lazy = 0\n",
+      "------Node 6: [4] = 4, Lazy = 0\n",
+      "------Node 7: [5] = 5, Lazy = 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def get_sum_with_lazy(l ,r, s, t, p):\n",
+    "    \"\"\"\n",
+    "    在区间更新后查询区间 [l, r] 的和，处理懒惰标记。\n",
+    "    \n",
+    "    参数：\n",
+    "    - l: 查询区间的起点\n",
+    "    - r: 查询区间的终点\n",
+    "    - [s, t]: 当前节点包含的区间\n",
+    "    - p: 当前节点编号\n",
+    "    \n",
+    "    返回值：查询区间的和\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    if l <= s and t <= r:\n",
+    "        # 当前节点包含的区间是查询区间的子集, 直接返回当前节点值\n",
+    "        return d[p]\n",
+    "    \n",
+    "    # 在递归查询之前, 先向下去传递lazy标记\n",
+    "    push_down(p, s, t)\n",
+    "    \n",
+    "    m = (s + t) >> 1\n",
+    "    sum_ = 0\n",
+    "    if l <= m:\n",
+    "        sum_ += get_sum_with_lazy(l, r, s, m, p << 1)\n",
+    "    if r > m:\n",
+    "        sum_ += get_sum_with_lazy(l, r, m + 1, t, p << 1 | 1)\n",
+    "    \n",
+    "    return sum_\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "print(\"现在查询[1,2]:\")\n",
+    "print(get_sum_with_lazy(1, 2, 1, n - 1, 1))\n",
+    "print_tree_with_lazy(1, n - 1, 1, d, lazy)\n",
+    "print(\"此时[1,2]的lazy还没有下放, 因为没有涉及到查询[1, 2]的子节点\")\n",
+    "print(\"现在查询[2,2]:\")\n",
+    "print(get_sum_with_lazy(2, 2, 1, n - 1, 1))\n",
+    "print_tree_with_lazy(1, n - 1, 1, d, lazy)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -138,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.8.6"
   }
  },
  "nbformat": 4,
