--- a/语法和算法/竞赛常用标准库/itertools.ipynb
+++ b/语法和算法/竞赛常用标准库/itertools.ipynb
@@ -87,6 +87,26 @@
     "\n",
     "print(list(itertools.islice(b, 0, len(b) - 1,2)))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 3. 记忆化搜索"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from functools import lru_cache\n",
+    "\n",
+    "@lru_cache(maxsize=None)\n",
+    "def f(n):\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
